classDiagram
    class FAQ {
        +id: int
        +question: str
        +answer: str
        +number: int
        +created_at: datetime
        +__repr__()
    }

    class Document_processing {
        +document : Document
        +extract_text_from_pdf()
        +text_to_chunks()
    }

    class Document {
        +id: int
        +filename: str
        +filepath: str
        +uploaded_at: datetime
        +__repr__()
    }

    class RAGEngine {
        +chunks : str
        +init_llm()
        +generate_faqs_from_chunks()
        +save_faqs()
    }

    Document --> Document_processing : feed
    Document "1" -- "*" FAQ : source_for
    Document_processing --> RAGEngine : transform into chunks
    RAGEngine --> FAQ : generates

